--- a/SpringSaleAppDemo/src/main/resources/templates/index.html
+++ b/SpringSaleAppDemo/src/main/resources/templates/index.html
@@ -1,15 +1,66 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <link rel="stylesheet" th:href="@{/css/style.css}"/>
+
     <head>
-        <title>The Anh</title>
+        <title>The Anh</title>       
+        <link rel="stylesheet" th:href="@{/css/style.css}"/>
+        <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css}" rel="stylesheet">
+        <script th:src="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js}"></script>
+
     </head>
     <body>
-        <ul>
-            <li th:each="product: ${products}" th:text="${product.name}"></li>
-        </ul>
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand"  th:text="Logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link"  th:text="'Trang chủ'"></a>
+                        </li>
+                        <li th:each="cate: ${categories}"  class="nav-item">
+                            <a class="nav-link"  th:text="${cate.name}"></a>
+                        </li>
 
-        <img style="width: 300px ; height: 300px " th:src="@{/images/Test.png}" alt="Test">
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <section class="container">
+            <div class="container mt-3">
+                <h2>Bảng thống kê sản phẩm</h2>
+                <a th:text="'Thêm sản phẩm'" class="btn btn-info mt-auto"></a>
+                <table class="table">
+                    <thead>
+                        <tr >
+                            <th th:text="Id"></th>
+                            <th th:text="name"></th>
+                            <th th:text="description"></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr  th:each="product : ${products}">
+                            <td>
+                                <img style="width: 200px ; height: 150px" th:src="${product.image}" alt="Hình sản phẩm">
+                            </td>
+                            <td th:text="${product.id}"></td>
+                            <td th:text="${product.name}"></td>
+                            <td th:text="${product.description}"></td>
+                            <td>
+                                <a class="btn btn-success" th:text="'Cập nhật'"></a>
+                                <a th:text="'Xóa'" class="btn btn-danger"></a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+
+
+
 
 
     </body>
