--- a/SpringSaleAppDemo/src/main/resources/templates/index.html
+++ b/SpringSaleAppDemo/src/main/resources/templates/index.html
@@ -21,6 +21,7 @@
                             <a class="nav-link"  th:text="'Trang chủ'"></a>
                         </li>
                         <li th:each="cate: ${categories}"  class="nav-item">
+
                             <a class="nav-link"  th:text="${cate.name}" th:href="@{/(cateId=${cate.id})}"  ></a>
                         </li>
 
@@ -62,15 +63,22 @@
                     </tbody>
                 </table>
             </div>
-        </section>
-<!--        <ul class="pagination">
-            <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item"><a class="page-link" href="#">Next</a></li>
-        </ul>-->
+            <ul class="pagination d-flex justify-content-center">
+                <th:block th:each="i : ${#numbers.sequence(1, counter)}">
+                    <li class="page-item" th:classappend="${i == currentPage} ? 'active'">
+                        <a class="page-link" th:text="${i}" th:href="@{/(page=${i})}"></a>
+                    </li>
+                </th:block>
+            </ul>
 
+        </section>
+        
+        <!--Footer-->
+
+        <div class="mt-4 p-5 bg-primary text-white rounded">
+            <h2>E-commerce Website</h2>
+            <p>Web ban hang &Copy , 2024</p>
+        </div>
 
 
 
