--- a/SpringSaleAppDemo/src/main/resources/templates/index.html
+++ b/SpringSaleAppDemo/src/main/resources/templates/index.html
@@ -9,6 +9,9 @@
 
     </head>
     <body>
+        
+        <!--Header-->
+        
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand"  th:text="Logo"></a>
@@ -34,7 +37,10 @@
                 </form>
             </div>
         </nav>
-
+        
+        
+        
+<!--Content - Product-->
         <section class="container">
             <div class="container mt-3">
                 <h2>Bảng thống kê sản phẩm</h2>
