Update JackSon and use JsonIgnore

--- a/SpringSaleAppDemo/src/main/resources/templates/layout/footer.html
+++ b/SpringSaleAppDemo/src/main/resources/templates/layout/footer.html
@@ -1,1 +1,9 @@
-
+<!--<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+    <body>
+        <div class="mt-4 p-5 bg-primary text-white rounded" th:fragment="footer">
+            <h2>E-commerce Website</h2>
+            <p>Web bán hàng &copy; 2024</p>
+        </div>
+    </body>
+</html>-->
