--- a/SpringSaleAppDemo/src/main/resources/templates/layout/base.html
+++ b/SpringSaleAppDemo/src/main/resources/templates/layout/base.html
@@ -1,1 +1,24 @@
+<!--<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 
+<head>
+    <title th:text="${title}">Base Layout</title>
+    <link rel="stylesheet" th:href="@{/css/style.css}" />
+    <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css}" rel="stylesheet">
+    <script th:src="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js}"></script>
+</head>
+
+<body>
+     Header 
+    <div th:replace="fragments/header :: header"></div>
+
+     Nội dung động của từng trang 
+    <div class="container mt-3">
+        <th:block th:insert="~{::content}"></th:block>
+    </div>
+
+     Footer 
+    <div th:replace="fragments/footer :: footer"></div>
+</body>
+
+</html>-->
