Update Templates Product

--- a/SpringSaleAppDemo/src/main/resources/templates/layout/footer.html
+++ b/SpringSaleAppDemo/src/main/resources/templates/layout/footer.html
@@ -1,1 +1,8 @@
-
+<!--        
+Footer
+<div th:fragment="footer">
+    <div class="mt-4 p-5 bg-primary text-white rounded">
+        <h2>E-commerce Website</h2>
+        <p>Web ban hang &Copy , 2024</p>
+    </div>
+</div>-->
