--- a/SpringSaleAppDemo/src/main/resources/templates/layout/base.html
+++ b/SpringSaleAppDemo/src/main/resources/templates/layout/base.html
@@ -1,1 +1,17 @@
+<!--<!DOCTYPE html>
+<html th:fragment="layout (body , head)" xmlns:th="http://www.thymeleaf.org">
 
+    <head th:replace="${head}">
+        <title>The Anh</title>       
+        <link rel="stylesheet" th:href="@{/css/style.css}"/>
+        <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css}" rel="stylesheet">
+        <script th:src="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js}"></script>
+
+    </head>
+    <body>
+        <div th:replace="${body}">
+        <div th:replace="header :: header"></div>
+        <div th:replace="footer :: footer"></div>
+        </div>
+    </body>
+</html>-->
