--- a/SpringSaleAppDemo/src/main/resources/templates/layout/header.html
+++ b/SpringSaleAppDemo/src/main/resources/templates/layout/header.html
@@ -1,1 +1,29 @@
+<!--   
+        Header
+        <div th:fragment="header">
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand"  th:text="Logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link"  th:text="'Trang chủ'"></a>
+                        </li>
+                        <li th:each="cate: ${categories}"  class="nav-item">
 
+                            <a class="nav-link"  th:text="${cate.name}" th:href="@{/(cateId=${cate.id})}"  ></a>
+                        </li>
+
+                    </ul>
+                </div>
+
+                <form class="d-flex" th:action="@{/}" method="get">
+                    <input class="form-control me-2" type="text" placeholder="Nhập từ tìm kiếm" name="kw">
+                    <button class="btn btn-primary" type="submit">Search</button>
+                </form>
+            </div>
+        </nav>
+            </div>-->
