--- a/SpringSaleAppDemo/src/main/resources/templates/index.html
+++ b/SpringSaleAppDemo/src/main/resources/templates/index.html
@@ -3,90 +3,77 @@
 
     <head>
         <title>The Anh</title>       
-        <link rel="stylesheet" th:href="@{/css/style.css}"/>
-        <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css}" rel="stylesheet">
-        <script th:src="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js}"></script>
+    <th:block th:replace="base :: styles"></th:block>
 
-    </head>
-    <body>
-        
-        <!--Header-->
-        
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand"  th:text="Logo"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link"  th:text="'Trang chủ'"></a>
-                        </li>
-                        <li th:each="cate: ${categories}"  class="nav-item">
+</head>
+<body>
 
-                            <a class="nav-link"  th:text="${cate.name}" th:href="@{/(cateId=${cate.id})}"  ></a>
-                        </li>
+    <div th:replace="base :: header"></div>
 
-                    </ul>
+
+
+    <!--Content - Product-->
+    <section class="container">
+        <form th:action="@{/}">
+            <div class="mb-3 mt-3">
+
+                <input type="text" class="form-control" placeholder="Từ khóa..." name="kw">
+            </div>
+            <div class="row">
+                <div class="col-6 mb-3 mt-3">
+                    <input type="number" class="form-control" placeholder="Gía min..." name="fromPrice">
                 </div>
-
-                <form class="d-flex" th:action="@{/}" method="get">
-                    <input class="form-control me-2" type="text" placeholder="Nhập từ tìm kiếm" name="kw">
-                    <button class="btn btn-primary" type="submit">Search</button>
-                </form>
+                <div class="col-6 mb-3 mt-3">
+                    <input type="number" class="form-control" placeholder="Gía max..." name="toPrice">
+                </div>
             </div>
-        </nav>
-        
-        
-        
-<!--Content - Product-->
-        <section class="container">
-            <div class="container mt-3">
-                <h2>Bảng thống kê sản phẩm</h2>
-                <a th:text="'Thêm sản phẩm'" class="btn btn-info mt-auto"></a>
-                <table class="table">
-                    <thead>
-                        <tr >
-                            <th th:text="Id"></th>
-                            <th th:text="name"></th>
-                            <th th:text="description"></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr  th:each="product : ${products}">
-                            <td>
-                                <img style="width: 200px ; height: 150px" th:src="${product.image}" alt="Hình sản phẩm">
-                            </td>
-                            <td th:text="${product.id}"></td>
-                            <td th:text="${product.name}"></td>
-                            <td th:text="${product.description}"></td>
-                            <td>
-                                <a class="btn btn-success" th:text="'Cập nhật'"></a>
-                                <a th:text="'Xóa'" class="btn btn-danger"></a>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <ul class="pagination d-flex justify-content-center">
-                <th:block th:each="i : ${#numbers.sequence(1, counter)}">
-                    <li class="page-item" th:classappend="${i == currentPage} ? 'active'">
-                        <a class="page-link" th:text="${i}" th:href="@{/(page=${i})}"></a>
-                    </li>
-                </th:block>
-            </ul>
+            <button type="submit" class="btn btn-primary">Tìm kiếm</button>
+        </form>
+        <hr />
+        <a th:href="@{/products}" class="btn btn-success mt-1">Thêm sản phẩm</a>
+        <div class="container mt-3">
+            <h2>Bảng thống kê sản phẩm</h2>
+            <div class="table-responsive">
+            <table class="table table-striped">
+                <thead>
+                    <tr >
+                        <th>Id</th>
+                        <th>Tên sản phẩm</th>
+                        <th>Gía</th>
 
-        </section>
-        
-        <!--Footer-->
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr  th:each="product : ${products}">
 
-        <div class="mt-4 p-5 bg-primary text-white rounded">
-            <h2>E-commerce Website</h2>
-            <p>Web ban hang &Copy , 2024</p>
+                        <td th:text="${product.id}"></td>
+                        <td th:text="${product.name}"></td>
+                        <td th:text="${product.price + 'VNĐ' }"></td>
+                        <td>
+                            <img style="width: 200px ; height: 150px" th:src="${product.image}" alt="Hình sản phẩm">
+                        </td>
+                        <td>
+                            <button class="btn btn-danger">&times;</button>
+                            <a th:href="@{'/products/' + ${product.id}}" class="btn btn-info">&#128296;</a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
+            </div>
+        <ul class="pagination d-flex justify-content-center">
+            <th:block th:each="i : ${#numbers.sequence(1, counter)}">
+                <li class="page-item" th:classappend="${i == currentPage} ? 'active'">
+                    <a class="page-link" th:text="${i}" th:href="@{/(page=${i}, kw=${param.kw}, fromPrice=${param.fromPrice}, toPrice=${param.toPrice})}"></a>
+
+                </li>
+            </th:block>
+        </ul>
+
+    </section>
 
 
 
-    </body>
+    <div th:replace="base :: footer"></div>
+</body>
 </html>
