--- a/SpringSaleAppDemo/src/main/resources/templates/products.html
+++ b/SpringSaleAppDemo/src/main/resources/templates/products.html
@@ -3,70 +3,45 @@
 
     <head>
         <title>The Anh</title>       
-        <link rel="stylesheet" th:href="@{/css/style.css}"/>
-        <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css}" rel="stylesheet">
-        <script th:src="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js}"></script>
+    <th:block th:replace="base :: styles"></th:block>
 
-    </head>
-    <body>
+</head>
+<body>
 
-        <!--Header-->
+    <div th:replace="base :: header"></div>
 
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand"  th:text="Logo"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link"  th:text="'Trang chủ'"></a>
-                        </li>
-                        <li th:each="cate: ${categories}"  class="nav-item">
 
-                            <a class="nav-link"  th:text="${cate.name}" th:href="@{/(cateId=${cate.id})}"  ></a>
-                        </li>
-
-                    </ul>
-                </div>
-
-                <form class="d-flex" th:action="@{/}" method="get">
-                    <input class="form-control me-2" type="text" placeholder="Nhập từ tìm kiếm" name="kw">
-                    <button class="btn btn-primary" type="submit">Search</button>
-                </form>
+    <!--Content - Product-->
+    <section class="container">
+        <div class="container mt-3">
+            <h1 class="text-center text-info mt-1">QUẢN TRỊ SẢN PHẨM</h1>
+                    <form th:action="@{/add}" th:object="${product}" method="post" enctype="multipart/form-data">
+            <div class="mb-3 mt-3">
+                
+                <input type="text" class="form-control" th:field="*{name}" placeholder="Tên sản phẩm" />
             </div>
-        </nav>
-
-
-
-        <!--Content - Product-->
-        <section class="container">
-            <div class="container mt-3">
-                <h1 class="text-center text-info">Sản phẩm</h1>
-                <form method="POST" modelAttribute="products">
-                    <div class="form-floating mb-3 mt-3">
-                        <input type="text" class="form-control" id="email" placeholder="Enter email" name="email">
-                        <label for="email">Email</label>
-                    </div>
-
-                    <div class="form-floating mt-3 mb-3">
-                        <input type="text" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
-                        <label for="pwd">Password</label>
-                    </div>
-                </form>
+            <div class="mb-3 mt-3">
+                
+                <input type="number" class="form-control" th:field="*{price}" placeholder="Gía sản phẩm" />
             </div>
+            <div class="mb-3 mt-3">
+                <select class="form-select" th:field="*{categoryId}">
+                    <option th:each="c:${categories}" th:value="${c.id}" th:text="${c.name}">1</option>
+                </select>
+            </div>
+            <div class="mb-3 mt-3">
+                <input type="file" class="form-control" th:field="*{file}" placeholder="Chọn ảnh sản phẩm"/>
+            </div>
+            
+            <input type="hidden" th:field="*{id}" />
+            <button type="submit" class="btn btn-primary" th:if="${product.id == null}">Thêm sản phẩm</button>
+            <button type="submit" class="btn btn-primary" th:unless="${product.id == null}">Cập nhật sản phẩm</button>
+        </form>
 
-        </section>
-
-        <!--Footer-->
-
-        <div class="mt-4 p-5 bg-primary text-white rounded">
-            <h2>E-commerce Website</h2>
-            <p>Web ban hang &Copy , 2024</p>
         </div>
+    </section>
 
 
-
-    </body>
-</html>
+            <div th:replace="base :: footer"></div>
+            </body>
+            </html>
