Update Add pro and update

--- a/SpringSaleAppDemo/src/main/resources/templates/index.html
+++ b/SpringSaleAppDemo/src/main/resources/templates/index.html
@@ -3,6 +3,7 @@
 
     <head>
         <title>The Anh</title>       
+        <!--trên head nên cần th:block-->
     <th:block th:replace="base :: styles"></th:block>
 
 </head>
@@ -73,7 +74,7 @@
     </section>
 
 
-
+<!--tên file html :: tên fragment-->
     <div th:replace="base :: footer"></div>
 </body>
 </html>
