--- a/SpringSaleAppDemo/src/main/resources/templates/base.html
+++ b/SpringSaleAppDemo/src/main/resources/templates/base.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Trang chu</title>
+        <!--Gan trên head phải có th:block-->
     <th:block th:fragment="styles">
         <link rel="stylesheet" th:href="@{/css/style.css}"/>
         <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css}" rel="stylesheet">
