--- a/SpringSaleAppDemo/src/main/resources/templates/base.html
+++ b/SpringSaleAppDemo/src/main/resources/templates/base.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
     <head>
         <title>Trang chu</title>
         <!--Gan trên head phải có th:block-->
@@ -28,6 +29,10 @@
 
                             <a class="nav-link"  th:text="${cate.name}" th:href="@{/(cateId=${cate.id})}"  ></a>
                         </li>
+                        <!--nếu đã đăng xuất hiên này do spring security làm do mình đã thêm thẻ ở trên-->
+                         <li class="nav-item" sec:authorize="isAuthenticated()">
+                                <a class="nav-link" th:href="@{/logout}">Đăng xuất</a>
+                            </li>
 
                     </ul>
                 </div>
