--- a/SpringSaleAppDemo/src/main/resources/templates/index.html
+++ b/SpringSaleAppDemo/src/main/resources/templates/index.html
@@ -54,7 +54,7 @@
                             <img style="width: 200px ; height: 150px" th:src="${product.image}" alt="Hình sản phẩm">
                         </td>
                         <td>
-                            <button class="btn btn-danger">&times;</button>
+                            <button class="btn btn-danger" th:onclick="'deleteProduct(\''+@{/api/products}+'\',' +${product.id} + ')'">&times;</button>
                             <a th:href="@{'/products/' + ${product.id}}" class="btn btn-info">&#128296;</a>
                         </td>
                     </tr>
@@ -76,5 +76,6 @@
 
 <!--tên file html :: tên fragment-->
     <div th:replace="base :: footer"></div>
+    <script th:src="@{/js/main.js}"></script>
 </body>
 </html>
